tests/whiley/invalid/test_128.wyal
type scf4list is (int[] list)
where:
    |list| > 0


assert "type invariant not satisfied":
    forall(int[] x):
        if:
            x == [0;0]
        then:
            x is scf4list


